--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -1,10 +1,12 @@
 .Card-container{
     background-color: white;
-    width: 20rem;
-    height: 10rem;
+    width: 200px;
+    height: 8rem;
     margin: 2rem 1rem;
     border-radius: 1rem;
-    position: relative;
+        
+    overflow: hidden;
+    
 }
 
 .topSection_Card-container{
