--- a/src/css/components/categoriesContainer.css
+++ b/src/css/components/categoriesContainer.css
@@ -3,14 +3,22 @@
     height: 100%;
     display: block;
     padding: 2rem;
+ 
 }
 
-#cardsContainer>h3{
+#cardsContainer h3{
     margin: 1rem;
+    
 }
 
 .categoryCards{
     width: 100%;
     display: flex;
+    overflow: scroll;
+    overflow-y: hidden;
     
+}
+
+#categoriesContainer h3{      
+    font-family:CircularStdBlack;
 }
