--- a/src/css/components/MetaDataDashboard.css
+++ b/src/css/components/MetaDataDashboard.css
@@ -23,6 +23,7 @@
     height: 40rem;
     opacity: .5;
     position: absolute;
+    z-index: -10;
     
 }
 
@@ -55,4 +56,7 @@
 
 .lineChart-container{
     padding: 5rem;
+}
+.turnFav{
+    cursor: pointer;
 }
