--- a/src/css/components/historyCards.css
+++ b/src/css/components/historyCards.css
@@ -37,9 +37,15 @@
     position: absolute;
     right: 3rem;
     top: 25%;
-    opacity: 1; 
+    opacity: .5; 
     z-index: 3;
+    cursor: pointer;
+}
 
+.leftTriangulo{
+    transform: rotate(.5turn);
+    left: 1rem;
+    display: none;
 }
 
 .card-history{
