--- a/src/css/components/tableRendicion.css
+++ b/src/css/components/tableRendicion.css
@@ -12,6 +12,37 @@
     cursor: pointer;
 }
 
+.titlesContainer{
+    display: flex;
+}
+
+.tableRendicion-Container{
+    margin: 5rem 3rem;
+}
+
+.header20{
+    width: 20%;
+    text-align: center;
+}
+
+.header40{
+    width: 40%;
+    text-align: center;
+}
+
+.filtersContainer{
+    margin: 3rem 0rem;
+    display: flex;
+    width: 100%;
+    
+}
+
+.filtersContainer > div{
+    margin: 2rem 0rem 2rem 1.3rem;
+    width: 15%;
+    
+}
+
 /*
 td:nth-child(2n+3){
     padding-left:0%!important;
