Fix Cards category width and height for responsive design. Added dataAux.js file with String JSON object with data in case the connection with Data Base fail (metadata of indecators and data of results, forecast and goals

--- a/src/css/components/category.css
+++ b/src/css/components/category.css
@@ -28,3 +28,19 @@
 .linkMore > a{
     font-size: 2rem;
 }
+
+@media screen and (max-width: 1920px) and (max-height:1080px) {
+
+
+    .categoryColumn{
+        width: 20%;
+    }
+
+    .categoryColumn h4{
+        font-size: 12px;
+    }
+
+    
+
+
+}
