--- a/src/css/components/cardCategory.css
+++ b/src/css/components/cardCategory.css
@@ -96,11 +96,18 @@
     background-image: url("../../pictures/powerBiType.png");
 }
 
-@media screen and (max-width:900px){
+@media screen and (max-width: 1920px) and (max-height:1080px) {
+
 
     .Card-container{
-        width: 16rem;
-
+        width: 100%;
     }
+
+    .dashIcon_container{
+        width: 1.5rem;
+        height: 1.5rem;
+        
+    }
+
 
 }
