--- a/src/css/components/cardCategory.css
+++ b/src/css/components/cardCategory.css
@@ -5,6 +5,7 @@
     margin: 1rem .5rem;
     border-radius: 1rem;
     position: relative;
+    text-decoration: none;
 }
 
 .topSection_Card-container{
@@ -101,6 +102,7 @@
 
     .Card-container{
         width: 100%;
+        text-decoration: none;
     }
 
     .dashIcon_container{
