--- a/src/css/components/category.css
+++ b/src/css/components/category.css
@@ -29,6 +29,12 @@
     font-size: 2rem;
 }
 
+.cardsCategory a{
+    text-decoration: none;  
+    color: #333333;
+
+}
+
 @media screen and (max-width: 1920px) and (max-height:1080px) {
 
 
