Update Cards in history, every time user select a card in category column is added to history list. Added Search with text to inputText in the searcher, every time user write a letter ask for matches to ElasticSearch

--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -4,9 +4,14 @@
     height: 8rem;
     margin: 2rem 1rem;
     border-radius: 1rem;
-        
+    text-decoration: none;    
     overflow: hidden;
     
+}
+
+a{
+    text-decoration: none;
+    color:#333333 !important;
 }
 
 .topSection_Card-container{
@@ -24,7 +29,7 @@
     font-size: 1rem;
 }
 
-#typeTitle-topSection_Card{
+.typeTitle-topSection_Card{
     margin: 1rem;
     
     
