--- a/src/css/pages/resultados.css
+++ b/src/css/pages/resultados.css
@@ -11,3 +11,18 @@
     width: 55%;
     margin: 5%;
 }
+
+@media screen and (max-width: 1280px) { 
+    .actives{
+        width: 30%;
+        margin: 1%;
+    }
+    .dataTable-res{
+        width: 64%;
+        margin: 1% 0%;
+    }
+
+    body{
+        /*background-color: red;*/
+    }
+}
