--- a/src/css/components/category.css
+++ b/src/css/components/category.css
@@ -35,8 +35,8 @@
 
 }
 
-@media screen and (max-width: 1920px) and (max-height:1080px) {
-
+@media screen and (max-width: 1920px)  {
+/*and (max-height:1080px)*/
 
     .categoryColumn{
         width: 20%;
